# yggdrasil

./: .gitignore  README.md  pyproject.toml
notebooks/: luncht.ipynb  summary_mark02.ipynb
sandbox/: __init__.py
sandbox/compStats_Honkela/: README.md  mcmc_toolbox.py
sandbox/compStats_Honkela/chapter6_MCMC/: metropolis_hastings_6_3_1.py  mh_sampling_efficency_6_4.py
sandbox/compStats_Honkela/chapter7_bayesianInference/: sampling_posterior_with_MCMC_7_2.py
sandbox/compStats_Honkela/chapter8_MCMCdiagnostics_MM_sampling/: parralel_tempering_8_3_3.py
sandbox/pyMC_learning/: coalMiningDisaster.py
