[tool.poetry]
name = "yggdrasil"
version = "0.1.0"
description = "exploratory analysis accompaning the PYggdrasil package"
authors = ["gordonkoehn <gordon@koehn.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
matplotlib = "pyggdrasil"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
